# tedOS

./: README.md
ted_os/: Cargo.toml  x86_64-ted_os.json
ted_os/src/: gdt.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
